--- a/Flat Monkey Dark/skin/skin_mainwindow_add.less
+++ b/Flat Monkey Dark/skin/skin_mainwindow_add.less
@@ -35,7 +35,7 @@ div[data-id="closeBtn"]:hover{
 
 [data-id=mainview], [data-id=mainview] .layer {
     background-color: @secondaryColor;
-    border-radius: 7px;
+    border-radius: 0px; /* Flat Monkey Dark: square title bars/panels (was 7px) */
     padding: 3px;
     padding-right: 0px;
 }
